# wabe

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.purple  Makefile  ONBOARDING.md  PURPLE_AGENT_GUIDE.md  README.md  __main__.py  docker-entrypoint-purple.sh  docker-entrypoint.sh  implementation_plan.md  main.py  pyproject.toml  run-docker.py  serve_ga.py  serve_wa.py  submission_guidelines_phase_one.md  test_screenshot_compat.py
.github/workflows/: docker-publish.yml
data/: tasks.json
docs/: MCP_MIGRATION.md
scenarios/web_browser/: browser_judge.py  scenario.toml  scenario_full.toml  scenario_langgraph.toml  scenario_react.toml  scenario_reliability.toml  white_agent.py  white_agent_lang_graph.py
scenarios/web_browser/agents/: __init__.py  adk_default.py  langgraph.py  react_adk.py  reliability.py
scripts/: build-all-images.sh  build-green-image.sh  build-purple-images.sh  check-format.sh  format.sh  quality-check.sh  sample_tasks.py  test.sh  validate_scenario.py
src/agentbeats/: __init__.py  client.py  client_cli.py  cloudflare.py  green_executor.py  models.py  run_scenario.py  tool_provider.py
src/eval/: benchmark.py  run.py  utils.py
src/eval/methods/: agenttrek_eval.py  automomous_eval.py  webjudge_general_eval.py  webjudge_online_mind2web.py  webvoyager_eval.py
src/eval/online_mind2web/: run.py  utils.py
src/green_agent/: agent.py  constants.py  default_agent.py  models.py  prompts.py  task_loader.py
src/green_agent/a2a/: agent_card.py  agent_executor.py  server.py
src/green_agent/task_execution/: browser_agent.py
src/green_agent/utils/: __init__.py  (+2 more)
src/shared/: __init__.py  browser_agent.py  browser_helper.py  html_cleaner.py  mcp_client.py  response_parser.py
src/utils/: common_utils.py  my_a2a.py
src/white_agent/: agent.py  default_agent.py
tests/unit/: __init__.py  test_mcp_client.py  test_reliability_agent.py
(+11 files in other folders)
